# dbpm

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  dbpm-env.ps1.example  dbpm-env.sh.example  pyproject.toml
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  database_deployment_issue.yml  feature_request.yml
docs/: comparison.md  getting-started.md  init.md  mvp-status.md  philosophy.md  registry.md  releases.md  rich-artifact-registry.md  script-generation-design.md  script-generation.md  test-command-design.md  vision.md
docs/archive/: rich-artifact-registry-planning-notes.md
docs/commands/: bootstrap-core.md  check-core.md  generate-scripts.md  init.md  install.md  lock.md  plan.md  publish.md  registry-index.md  reinstall.md  resume.md  source-types.md  upgrade.md  validate.md  (+1 more)
examples/: common-workflows.md  mvp-usage.md  simple_scheduler-lock.example.json
scripts/: index-package.sh  test-unit.sh
spec/: dependency-resolution.md  deployment-modes.md  environment-policy.md  lockfile.md  manifest.md  mvp.md  package-layout.md  package-retrieval.md  provenance.md  runtime-component.md
tests/: test_chain.py  test_cli.py  test_connect.py  test_db.py  test_environment.py  test_executor.py  test_index_wrapper.py  test_initializer.py  test_integration_db.py  test_lockfile.py  test_manifest.py  test_planner.py  test_provenance.py  test_publisher.py  test_registry.py  test_resolver.py  test_runtime.py  test_script_generator.py  test_workspace.py  test_zip_source.py
(+20 files in other folders)
